--- a/public/assets/frontend/responsive.css
+++ b/public/assets/frontend/responsive.css
@@ -1,4 +1,102 @@
 @media only screen and (max-width: 768px) {
+    .menu-box {
+        display: block;
+        width: 30px;
+        height: 30px;
+    }
+
+    .menu-button,
+    .menu-button::before,
+    .menu-button::after {
+        display: block;
+        background-color: white;
+        height: 4px;
+        width: 30px;
+        transition: transform 400ms cubic-bezier(0.23, 1, 0.32, 1);
+        border-radius: 2px;
+        -webkit-transition: transform 400ms cubic-bezier(0.23, 1, 0.32, 1);
+        -moz-transition: transform 400ms cubic-bezier(0.23, 1, 0.32, 1);
+        -ms-transition: transform 400ms cubic-bezier(0.23, 1, 0.32, 1);
+        -o-transition: transform 400ms cubic-bezier(0.23, 1, 0.32, 1);
+        -webkit-border-radius: 2px;
+        -moz-border-radius: 2px;
+        -ms-border-radius: 2px;
+        -o-border-radius: 2px;
+    }
+    .menu-button::before {
+        content: "";
+        position: absolute;
+        margin-top: -8px;
+    }
+
+    .menu-button::after {
+        content: "";
+        position: absolute;
+        margin-top: 8px;
+    }
+    .menu-box.active .menu-icon .menu-button::before {
+        margin-top: 0px;
+        transform: rotate(405deg);
+        -webkit-transform: rotate(405deg);
+        -moz-transform: rotate(405deg);
+        -ms-transform: rotate(405deg);
+        -o-transform: rotate(405deg);
+    }
+
+    .menu-box.active .menu-icon .menu-button {
+        background: transparent;
+    }
+    .menu-box.active .menu-icon .menu-button::after {
+        margin-top: 0px;
+        transform: rotate(-405deg);
+        -webkit-transform: rotate(-405deg);
+        -moz-transform: rotate(-405deg);
+        -ms-transform: rotate(-405deg);
+        -o-transform: rotate(-405deg);
+    }
+
+    .nav-header {
+        /* height: 60vh; */
+        background-color: #002a28;
+        opacity: 0.8;
+        transition-duration: 500ms;
+    }
+
+    .header-content {
+        flex-direction: column;
+        position: relative;
+        gap: 10px;
+    }
+
+    .nav-logo {
+        align-self: normal;
+    }
+
+    .nav-content {
+        text-align: center;
+        gap: 10px;
+        font-size: 1rem;
+        flex-direction: column;
+        height: 0;
+        overflow: hidden;
+        display: none;
+        width: 100%;
+    }
+
+    .nav-actions {
+        margin-top: 10px;
+        height: 0;
+        overflow: hidden;
+        display: none;
+    }
+
+    .active.nav-content,
+    .active.nav-actions {
+        display: flex;
+        overflow: auto;
+        height: auto;
+    }
+
     .about-content .about-cards::after {
         width: 60px;
         height: 60px;
@@ -6,6 +104,10 @@
 
     .service-item {
         flex: 0 0 30%;
+    }
+
+    .back-to-top {
+        margin: 5px;
     }
 }
 
@@ -32,6 +134,11 @@
 }
 
 @media only screen and (max-width: 430px) {
+    .analysis-items {
+        justify-content: center;
+        text-align: center;
+    }
+
     .analysis-item.d-flex.flex-column.align-items-center {
         flex-basis: 50%;
     }
